apps/web-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: webtest
spec:
  selector:
    app: nginx-web
  ports:
    - port: 80
      targetPort: 80
